test_compiler/errors/e03.gm
Procedure foo()
{
  Graph G1; 
  N_P<Int>(G1) X;

  Graph G2;
  Node(G2) y;

  G2.X = 0;
  y.X = 0;
}
